--- a/estilo.css
+++ b/estilo.css
@@ -7,4 +7,31 @@ li{
     font-size: larger;
 }
 
+#contenedor{
+    background-color: aqua;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    margin-top: 25px;
 
+
+}
+.cabecera{
+    border: red;
+}
+
+.contenido{ background-color: aquamarine;
+    
+
+}
+
+.destacado{
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 30px;
+background-color: blueviolet;
+
+
+
+}
