--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@ li{
 
 }
 .cabecera{
-    border: red;
+    border: red solid 3px;
 }
 
 .contenido{ background-color: aquamarine;
@@ -28,7 +28,7 @@ li{
 
 .destacado{
 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 30px;
 background-color: blueviolet;
 
